# repurpose-api

./: .clinerules.md  .env  .env.example  .gitignore  CONFIGURATION_UPDATE_SUMMARY.md  CONTENT_CONFIGURATION_GUIDE.md  ENGLISH_TRANSCRIPT_USAGE_GUIDE.md  FRONTEND_GUIDE.md  IMPLEMENTATION_COMPLETE.md  PRD.md  QUICKSTART.md  QUICK_START.md  README.md  add_repurposed_text_column.py  channelvideos_alt.py  database.py  inspect_schema_script.py  main.py  migrate_transcript_column.py  migrate_video_url_column.py  presets.json  pyproject.toml  repurpose.py  requirements.txt  rules.md  run_server.py  start_server.py  sync_videos_schema.py  test_configuration.py  test_gen.py  transcript.py  yt_repurposer.db
api/: config.py  models.py
core/: database.py
docs/: API_TEST_RESULTS.md  CLI_CONFIGURATION_GUIDE.md  DOCUMENT_SUPPORT_SUMMARY.md  ENGLISH_TRANSCRIPT_IMPLEMENTATION.md  FINAL_TEST_SUMMARY.md  ORGANIZATION_SUMMARY.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  PROMPT_BALANCE_IMPROVEMENTS.md  QUICK_REFERENCE_CONFIG.md  api_guide.md  fastapi.md  gemini.md  index.md  pydantic.md  rich.md  sqlalchemy.md  trafilatura.md  youtube-transcript.md
frontend/: IMPLEMENTATION.md  README.md  dump.txt  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend-plan/: INDEX.md  QUICK-START.md  README.md  dump.txt
memory/: README.md  decision-2026-01-13-remove-postiz.md  session-2026-01-13-postiz-testing.md
output/: generated_content.csv
scripts/: run_server.py
specs/: api.md  data.md  features.md  specs.md  stack.md
tasks/: tasks.md
tests/: test_all_endpoints.py  (+17 more)
(+127 files in other folders)
