[project]
name = "repurpose-api"
version = "0.1.0"
description = "SaaS content repurposing tool using Gemini API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "sqlmodel",
    "psutil",
    "alembic",
    "aiosqlite",
    "prometheus-client",
    "prometheus-fastapi-instrumentator",
    "openai>=1.0.0",
    "youtube-transcript-api",
    "youtube-search-python",
    "yt-dlp",
    "scrapetube",
    "youtube-comment-downloader",
    "pandas",
    "rich",
    "pypdf",
    "python-docx",
    "markdown2",
    "chardet",
    "python-multipart",
    "requests",
    "google-generativeai"
]

[project.scripts]
repurpose = "repurpose:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "api"]
force-include = { "repurpose.py" = "repurpose.py", "presets.json" = "presets.json" }
